# basex-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: audit.yml  rust.yml
examples/home_depot/: README.md  main.rs
examples/home_depot/files/: catalogue.xml  hornbach.xq  warehouse.xml
examples/webapp/: main.rs  query.xq
examples/webapp-sync/: main.rs
src/: client.rs  connection.rs  errors.rs  lib.rs  query.rs  resource.rs  stream.rs  tests.rs
src/asynchronous/: client.rs  connection.rs  escape_reader.rs  mod.rs  resource.rs  response.rs  tests.rs
src/asynchronous/query/: argument.rs  compiler.rs  errors.rs  query.rs  response.rs  serializer.rs
src/basex/: client.rs  connection.rs  errors.rs  mod.rs  query.rs
src/client/: client.rs  mod.rs  response.rs
src/connection/: connection.rs  escape_reader.rs  mod.rs
src/query/: analysis.rs  argument.rs  compiler.rs  errors.rs  mod.rs  query.rs  response.rs  serializer.rs
tests/: client_clones_with_same_stream.rs  command_after_unread_query_succeeds.rs  command_with_empty_response_finishes.rs  command_with_invalid_argument_fails.rs  command_with_open_query_succeeds.rs  command_without_open_database_fails.rs  multidoc_query.rs  multidoc_transform.rs  multifile_query.rs  query_binds_context.rs  query_binds_variables.rs  query_creates_xml_on_created_database_with_added_resources.rs  query_recognizes_updating_statements.rs  query_runs_on_created_database.rs  query_runs_on_created_database_with_added_resources.rs  query_runs_on_created_database_with_replaced_resource.rs  query_shows_info_when_enabled.rs  query_uses_serialization_parameters.rs  query_with_undeclared_variable_fails.rs  replaced_resource_query.rs  simple_query.rs  storing_and_retrieving_binary_file_succeeds.rs
tests/common/: mod.rs
tests/files/: harvester.xq  harvester_output.xml  powder.xml  sleeping.xml
