[package]
name = "basex"
version = "0.7.0"
authors = ["Roman Hodulák <hodulakr@gmail.com>"]
edition = "2018"
license = "ISC"
description = "A client library for BaseX XQuery databases."
repository = "https://github.com/RomanHodulak/basex-rs"
readme = "README.md"
categories = ["database"]
keywords = ["database", "basex", "xml", "xquery", "xpath"]
include = [
    "src/**/*.rs",
    "tests/",
    "Cargo.toml",
]

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]

[dependencies]
async-trait = "<0.2,>=0.1.0"
md5 = "<=0.7.0,>=0.3.0"
tokio = { version = "1", features = ["default", "net", "io-util", "test-util", "macros"] }
pin-project = "1"

[dev-dependencies]
rocket = "<=0.5.0-rc.2,>=0.5.0-rc.1"
rocket-sync = { version = "=0.4.11", package = "rocket" }
tempfile = "<4,>=3"
matches = "<=0.1.9,>=0.1.0"
rust-embed = "<7,>=6.3.0"
circbuf = "0.2.0"
test-case = "<1.2.1,>=0.3.2"
